# advent-of-code

./: README.md  aoc.opam  dune-project
2022/: DayFive.ml  DayFour.ml  DayOne.ml  DaySix.ml  DayThree.ml
2023/: DayFifteen.c  DayOne.c
2024/: DayEight.pl  DayEleven.pl  DayFive.pl  DayFour.pl  DayNine.pl  DayOne.pl  DaySeven.pl  DaySix.pl  DayTen.pl  DayThree.pl  DayTwelve.pl  DayTwo.pl
2025/: DayOne.pl  DayThree.pl  DayTwo.pl
lib/: dune
