(lang dune 3.6)

(name aoc)

(generate_opam_files true)

(source
 (github andrewj-brown/advent-of-code-2022))

(authors "Andrew Brown")

(maintainers "Andrew Brown")

(license MIT)

(documentation n/a)

(package
 (name aoc)
 (synopsis "advent of code solutions for 2022.")
 (description "pretty self explanatory.")
 (depends ocaml dune)
 (tags
  ("aoc" "advent of code" "advent")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
